fixed nav rendering behind cards

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,6 @@
 nav {
     position: sticky;
+    top: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
