--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -20,9 +20,13 @@ main {
 	background: transparent;
 }
 
-main,nav,footer {
+main,footer {
 	position: relative;
 	z-index: 1;
+}
+
+nav {
+     z-index: 2;
 }
 
 body {
